# formal-ontology-analysis

./: Makefile  README.md  pyproject.toml
analysis/: formal-ontology-usage-analysis.ipynb
analysis/output/: plan-specification-children.tsv
repo-dirs/: Makefile
