[tool.poetry]
name = "formal-ontology-analysis"
version = "0.1.0"
description = ""
authors = ["cmungall <cjm@berkeleybop.org>"]
readme = "README.md"
packages = [{include = "formal_ontology_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyter = "^1.0.0"
pandas = "^1.5.3"
seaborn = "^0.12.2"
SQLAlchemy = "^1.4.32, !=1.4.46"
greenlet = "!=2.0.2"
oaklib = "^0.2.0"
scipy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
